SET(TARGET_NAME "boost")
FILE(GLOB_RECURSE EXECUTABLE_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h *.hpp *.c)
SET( TARGET_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/dep/${TARGET_NAME}" )

ADD_LIBRARY("${TARGET_NAME}" ${EXECUTABLE_SRCS})

INCLUDE_DIRECTORIES("${TARGET_INCLUDE_DIR}")

SET( ${TARGET_NAME}_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE )
SET( ${TARGET_NAME}_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE )